--- a/src/assets/css/sass/gerador_contrato/index.scss
+++ b/src/assets/css/sass/gerador_contrato/index.scss
@@ -25,7 +25,7 @@
         max-width: 100%;
         margin: 10px 20px;
         border: 1px solid #aaa;
-        padding: 30px;
+        padding: 20px 30px;
         height: auto;
         display: flex;
         flex-wrap: wrap;
