--- a/src/components/geradorContrato/index.html
+++ b/src/components/geradorContrato/index.html
@@ -6,6 +6,17 @@
     <h3><img src='./assets/img/loading.gif' /> <span>Gerando Contrato ...</span> </h3>
   </div>
   <form id="form_contrato">
+    <div id='bg_div_id_contrato'>
+    <label id='label_id_contrato_automatico'>
+      <span>Gerar ID Automática</span>
+      <input id='checkbox_id_automatico_contrato' type='checkbox'>
+    </label>
+    <div id='div_id_contrato'>
+    <label>ID Contrato:</label>
+    <input id='id_contrato' maxlength="5" required type='text' />
+     </div>
+  </input>
+  </div>
     <!-------------------------Fieldset Responsável----------------------->
     <div class='fieldset' id='fieldset_resp'>
       <div id='div_btn_marcar_resp_aluno'>
