--- a/src/assets/css/sass/gerador_contrato/index.scss
+++ b/src/assets/css/sass/gerador_contrato/index.scss
@@ -2,7 +2,8 @@
 @use './fieldset_resp_aluno.scss' as *;
 @use './fieldset_curso.scss' as *;
 @use './loading_contrato.scss' as *;
-
+@use './id_contrato.scss' as *;
+ 
 * {
     box-sizing: border-box;
 }
@@ -20,6 +21,8 @@
     font-size: 14px;
     color: #333;
     overflow: hidden;
+
+
     .fieldset {
         transition: all 1s;
         max-width: 100%;
