ID automático contrato configurado

--- a/src/assets/css/sass/gerador_contrato/id_contrato.scss
+++ b/src/assets/css/sass/gerador_contrato/id_contrato.scss
@@ -47,7 +47,7 @@
          }
          input[readonly="true"]{
              border:1px solid $primary-color;
-             background:#a0b6cd;
+             background:#c3cad3;
          }
     }
   
