--- a/src/components/geradorContrato/index.html
+++ b/src/components/geradorContrato/index.html
@@ -7,20 +7,19 @@
   </div>
   <form id="form_contrato">
     <div id='bg_div_id_contrato'>
-    <label id='label_id_contrato_automatico'>
-      <span>Gerar ID Automático</span>
-      <input id='checkbox_id_automatico_contrato' type='checkbox'>
-    </label>
-    <div id='div_id_contrato'>
-    <label>ID Contrato:</label>
-    <input id='id_contrato' maxlength="5" required type='text' list="list_id_contrato"/>
-    <datalist id='list_id_contrato'>
-      <option></option>
-    </datalist>
-     </div>
-  </input>
-  </div>
-    <!-------------------------Fieldset Responsável----------------------->
+      <label id='label_id_automatico_contrato'>
+        <span>Gerar ID Automático</span>
+        <input id='checkbox_id_automatico_contrato' type='checkbox'>
+      </label>
+       <div id='div_id_contrato'>
+         <label>ID Contrato:</label>
+          <input id='id_contrato' maxlength="5" required type='text' list="list_id_contrato"/>
+          <datalist id='list_id_contrato'>
+            <option></option>
+          </datalist>
+        </div><!--div_id_contrato-->
+    </div><!--bg_div_id_contrato-->
+     <!-------------------------Fieldset Responsável----------------------->
     <div class='fieldset' id='fieldset_resp'>
       <div id='div_btn_marcar_resp_aluno'>
         <label id='btn_marcar_resp_aluno' for='checkbox_resp_aluno'>
