--- a/src/assets/css/sass/alunos/_id_aluno.scss
+++ b/src/assets/css/sass/alunos/_id_aluno.scss
@@ -1,25 +1,45 @@
 @use '../abstracts/' as *;
-#bg_div_id_aluno {
+#div_id_aluno {
     display: flex;
-    margin: 0 20px 10px;
+    flex-shrink: 1;
+    flex-grow: 1;
+    margin: 20px 10px;
     border: 1px solid #111;
     background: #eee;
-    padding: 10px;
+    padding:10px !important; 
     label {
         display: flex;
         align-items: center;
         background: #fff;
         padding: 10px 20px;
     }
+    input {
+        flex-shrink: 1;
+        border: $border-set-default;
+        transition: all 0.2s;
+        padding: 5px;
+        font-size: 18px;
+        background: #fff;
+        &:focus {
+            outline: 2px solid $primary-color;
+            outline-offset: -2px;
+        }
+    }
+    input[readonly="true"] {
+        border: 1px solid $primary-color;
+        background: #c3cad3;
+    }
+
 
     .input_invalido {
         background: #f1c0c0 !important;
     }
 
     #label_id_automatico_aluno {
+        margin-right:10px;
         transition: all 0.5s;
         @extend .btn-default;
-        max-width: 300px;
+        max-width: 200px;
         width: 200px;
         user-select: none;
 
@@ -34,23 +54,7 @@
         background: $primary-color !important;
         color: #fff !important;
     }
-    #div_id_aluno {
-        display: flex;
-        input {
-            border:$border-set-default;
-            transition: all 0.2s;
-            padding: 5px;
-            font-size: 18px;
-            background:#fff;
-            &:focus {
-                outline: 2px solid $primary-color;
-                outline-offset: -2px;
-            }
-        }
-        input[readonly="true"] {
-            border: 1px solid $primary-color;
-            background: #c3cad3;
-        }
-    }
+
+
 
 }
