--- a/src/components/alunos/formAddAluno.html
+++ b/src/components/alunos/formAddAluno.html
@@ -4,15 +4,14 @@
       <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
     </svg> Adicionar Aluno</h3>
     <fieldset class='fieldset'>
-
-      <div id='bg_div_id_aluno'>
-        <label id='label_id_automatico_aluno' class='label_btn_checkbox'>
+      <div id='div_id_aluno'>
+        <label id='label_ra_automatico_aluno' class='label_btn_checkbox'>
           <span>Gerar ID Automático</span>
-          <input id='checkbox_id_automatico_aluno' type='checkbox'>
+          <input id='checkbox_ra_automatico_aluno' type='checkbox'>
         </label>
-        <label for="add_aluno_ra">RAs:</label>
-        <input required id="add_aluno_ra" type="text" list="add_aluno_datalist_ra"/>
-        <datalist id='add_aluno_datalist_ra'>
+        <label for="aluno_ra">RA:</label>
+        <input required id="aluno_ra" type="text" list="aluno_datalist_ra"/>
+        <datalist id='aluno_datalist_ra'>
           <option></option>
         </datalist>
       </div><!--bg_div_id_aluno-->
