--- a/src/components/alunos/formAddAluno.html
+++ b/src/components/alunos/formAddAluno.html
@@ -4,7 +4,7 @@
       <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
     </svg> Adicionar Aluno</h3>
     <fieldset class='fieldset'>
-      <div id='div_id_aluno'>
+      <div id='div_ra_aluno'>
         <label id='label_ra_automatico_aluno' class='label_btn_checkbox'>
           <span>Gerar ID Automático</span>
           <input id='checkbox_ra_automatico_aluno' type='checkbox'>
